增加练习代码